# taifoon-solver

./: .dockerignore  .env.example  .gitignore  AUTONOMOUS_DELIVERY_PLAN.md  BRAND.md  BUGFIX_SUMMARY.md  CLI_README.md  COMPLETE_MASTER_PLAN.md  COVERAGE_ANALYSIS.md  COVERAGE_IMPLEMENTATION_PLAN.md  COVERAGE_MATRIX.md  CRITICAL_BUGS_FOUND.md  Cargo.toml  DATA_QUALITY_ANALYSIS.md  DELIVERY_PLAN.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_STATUS.md  Dockerfile.dashboard  Dockerfile.solver  E2E_TESTING.md  FINAL_STATUS.md  FIXTURE_AUDIT_REPORT.md  FRONTIER_DEMO.md  FRONTIER_HACKATHON_PLAN.md  GAS_PRICE_INTEGRATION_STATUS.md  GAS_PRICING_ANALYSIS.md  GAS_PRICING_FIX_SUMMARY.md  GENOME_STREAM_DATA_QUALITY_ISSUES.md  GENOME_STREAM_INTEGRATION.md  GRANT_DELIVERY_STATUS.md  HACKATHON_COLOSSEUM_PLAN.md  IMMEDIATE_FIXES_PLAN.md  LICENSE  LICENSE.md  LIFI_ROOT_CAUSE_ANALYSIS.md  LIVE_OPS_LOG.md  MAMBA_TRACKING.md  PROTOCOL_ADAPTERS_TEST_RESULTS.md  (+36 more)
.github/workflows/: ci.yml
config/: adapter_registry.json  chain_wiring.json  lwc_deployments.json  protocols_registry.json  solver_intel.json
crates/donut-adjudicator/: Cargo.toml
crates/donut-adjudicator/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/examples/: run_live_fixtures.rs
crates/executor/src/: across_executor.rs  estimate.rs  evm_estimate.rs  lambda_controller.rs  lib.rs  lifi_meta_router.rs  mayan_evm_estimate.rs  mayan_solana_estimate.rs  outcome_log.rs  router.rs  skip_rules.rs  spinner_solver.rs  wormhole.rs
crates/executor/tests/: across_calldata.rs  across_estimate_test.rs  debridge_calldata.rs  debridge_estimate_test.rs  e2e_multichain_test.rs  lifi_estimate_test.rs  lifi_projection.rs  mayan_evm_estimate_test.rs  mayan_solana_estimate_test.rs  mayan_solana_integration.rs
crates/genome-client/: Cargo.toml
crates/genome-client/src/: dln_solana_poller.rs  lib.rs
crates/mempool-monitor/: Cargo.toml
crates/mempool-monitor/src/: lib.rs
crates/portfolio-sidecar/: Cargo.toml
crates/portfolio-sidecar/src/: inventory.rs  kamino_intents.rs  lib.rs  lwc_abi.json  lwc_manager.rs  rebalancer.rs  scanner.rs  tx_guard.rs
crates/portfolio-sidecar/tests/: lwc_manager_integration.rs
crates/profit-calc/: Cargo.toml
crates/profit-calc/src/: lib.rs
crates/protocol-adapters/: Cargo.toml
crates/protocol-adapters-solana/: Cargo.toml
crates/protocol-adapters-solana/src/: adapter_trait.rs  dln_solana.rs  keychain.rs  lib.rs  mayan_flash.rs  mayan_solana.rs  mayan_swift_adapter.rs  relay_solana.rs  send.rs  simulate.rs  solana_tests.rs  wormhole_ntt.rs
crates/protocol-adapters/src/: across.rs  debridge.rs  lib.rs  lifi.rs  mayan.rs  orbiter.rs  stargate.rs
crates/protocol-adapters/tests/: debridge_calldata_identity.rs  integration_test.rs
crates/solver-api/: Cargo.toml
crates/solver-api/src/: hand.rs  hosting.rs  lib.rs
crates/solver-main/: Cargo.toml
crates/solver-main/src/: attestation_pump.rs  lib.rs  lifi_resolver.rs  main.rs  messiah.rs
crates/solver-registry/: Cargo.toml
crates/solver-registry/src/: lib.rs
crates/solver-registry/tests/: auth_guard_integration.rs
crates/solver-sandbox/: Cargo.toml
crates/solver-sandbox/src/: api.rs  compete_sim.rs  genome_replay.rs  lib.rs  main.rs  well_sim.rs
crates/solver-sandbox/tests/: compete_sim_integration.rs  solana_attestation_sandbox.rs
crates/spinner-signer/: Cargo.toml  README.md
crates/spinner-signer/src/: config.rs  lib.rs
crates/spinner-signer/src/evm/: mod.rs  roles_abi.rs
crates/spinner-signer/src/solana/: mod.rs  squads_program.rs
crates/spinner-signer/tests/: evm_session_policy.rs  solana_session_policy.rs
crates/t3rn-sidecar/: Cargo.toml
crates/t3rn-sidecar/src/: abi.rs  config.rs  deposit_all.rs  fills_log.rs  gas_razor.rs  hop_rebalancer.rs  lib.rs  order_monitor.rs  self_fill.rs
crates/taifoon-arb-bridge/: Cargo.toml
crates/taifoon-arb-bridge/src/: lib.rs
crates/taifoon-cli/: Cargo.toml
crates/taifoon-cli/src/: execute.rs  main.rs  monitor.rs  test_mode.rs  wallet.rs
crates/taifoon-cli/src/commands/: claim.rs  fees.rs  mod.rs  onboard.rs  portfolio.rs  setup_approvals.rs  sidecar.rs
crates/wallet-manager/: Cargo.toml
crates/wallet-manager/src/: lib.rs
dashboard/: .npmrc  DESIGN_SYSTEM.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
dashboard/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
dashboard/components/: ClaimsPanel.tsx  IntentsStream.tsx  LivePnL.tsx  MoneyFlow.tsx  PerformanceStats.tsx  PortfolioPanel.tsx  ProtocolBreakdown.tsx  RazorGasPresets.tsx  TopIntents.tsx  WalletPin.tsx
dashboard/hooks/: useSolverEvents.ts
dashboard/lib/: providers.tsx  tokens.ts  wagmi.ts
deploy/: Dockerfile  README.md  docker-compose.yml  run.sh
docs/: RESEARCH_DEX_LANDSCAPE_AND_TAIFOON_ORDERBOOK.md  architecture.md  donut_flow.md  tsul.md
fixtures/: README.md  SMOKING_GUN_EVIDENCE.md  chains-observed-20260425-133745.txt  extraction-summary-20260425-133745.json  gas_issues_summary.json  intents-full-dump-20260425-133745.json  routes-observed-20260425-133745.txt  unrealistic_profits.json
fixtures/backup/: across_v3_intents.json.backup  across_v3_intents.json.before_patch  allbridge_intents.json.backup  hyperlane_intents.json.backup  hyperlane_intents.json.before_patch  layerzero_v2_intents.json.backup  lifi_v2_intents.json.backup  lifi_v2_intents.json.before_patch  orbiter_finance_intents.json.backup  orbiter_finance_intents.json.before_patch  squid_router_intents.json.backup  stargate_v2_intents.json.backup  (+2 more)
k8s/: Dockerfile  deployment.yaml  register-webhook.sh  solver-sidecar.yaml
landing/: index.html
scripts/: create-frontier-issues.sh  lwc_dry_run.sh  sandbox_smoke_test.sh  test-gas-complete.sh  test-gas-integration.sh  test-gas-simple.sh
tests/: fixture_validator.rs  fixtures_parse.rs
tools/: capture_intent.sh  create_across_eth_self_fill.py  create_debridge_self_fill_order.py  create_debridge_usdc_self_fill.py  intent_replay.sh  run_continuous.sh  setup_approvals.sh  swap_usdt_to_eth.py  watch_fillable_orders.py
(+89 files in other folders)
