[workspace]
resolver = "2"
members = [
    "crates/genome-client",
    "crates/profit-calc",
    "crates/executor",
    "crates/solver-main",
    "crates/solver-api",
    "crates/t3rn-sidecar",
    "crates/protocol-adapters",
    "crates/mempool-monitor",
    "crates/taifoon-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yawningmonsoon"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"

# HTTP & SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum
alloy = { version = "0.8", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Utilities
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Storage (outcome log)
rusqlite = { version = "0.32", features = ["bundled"] }

# Hex
hex = "0.4"
