[workspace]
resolver = "2"
members = [
    "crates/genome-client",
    "crates/profit-calc",
    "crates/executor",
    "crates/solver-main",
    "crates/solver-api",
    "crates/protocol-adapters",
    "crates/protocol-adapters-solana",
    "crates/mempool-monitor",
    "crates/taifoon-cli",
    "crates/wallet-manager",
    "crates/taifoon-arb-bridge",
    "crates/portfolio-sidecar",
    "crates/solver-registry",
    "crates/solver-sandbox",
    "crates/donut-adjudicator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yawningmonsoon"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"

# HTTP & SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum
alloy = { version = "0.8", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"

# Utilities
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Storage (outcome log)
rusqlite = { version = "0.32", features = ["bundled"] }

# Hex
hex = "0.4"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Async trait support (donut-adjudicator uses this for the async FeeSplitAdjudicator trait)
async-trait = "0.1"

# SHA-256 (donut-adjudicator hash-chain + canonical-JSON digesting)
sha2 = "0.10"

# SIWE — Sign-In With Ethereum (EIP-4361). solver-api verifies provision
# requests by recovering the SIWE message signature to the claimed address.
siwe = "0.6"
