[package]
name = "donut-adjudicator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Read-only dependency on executor for OutcomeRecord. The adjudicator never
# mutates the outcome log — it only consumes records to produce attestations.
executor = { path = "../executor" }

alloy.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono = { workspace = true }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
