[package]
name = "executor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
genome-client = { path = "../genome-client" }
profit-calc = { path = "../profit-calc" }
t3rn-sidecar = { path = "../t3rn-sidecar" }
protocol-adapters = { path = "../protocol-adapters" }
protocol-adapters-solana = { path = "../protocol-adapters-solana" }
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
rusqlite.workspace = true
hex.workspace = true
async-trait = "0.1"
base64 = "0.22"
