[package]
name = "mempool-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full"] }
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"
