[package]
name = "portfolio-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
bs58 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
