[package]
name = "profit-calc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
genome-client = { path = "../genome-client" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
