[package]
name = "protocol-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
genome-client = { path = "../genome-client" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
alloy.workspace = true
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
