[package]
name = "solver-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal: executor crate owns the rusqlite outcome log + P&L aggregator.
# solver-api depends on it so the dashboard endpoints can read realized P&L
# without duplicating the SQL logic.
executor = { path = "../executor" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
