[package]
name = "solver-main"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "taifoon-solver"
path = "src/main.rs"

[dependencies]
genome-client = { path = "../genome-client" }
profit-calc = { path = "../profit-calc" }
executor = { path = "../executor" }
solver-api = { path = "../solver-api" }
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
