[package]
name = "solver-main"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "solver_main"
path = "src/lib.rs"

[[bin]]
name = "taifoon-solver"
path = "src/main.rs"

[[bin]]
name = "estimate_one"
path = "src/bin/estimate_one.rs"

[dependencies]
genome-client = { path = "../genome-client" }
profit-calc = { path = "../profit-calc" }
executor = { path = "../executor" }
solver-api = { path = "../solver-api" }
taifoon-arb-bridge = { path = "../taifoon-arb-bridge" }
wallet-manager = { path = "../wallet-manager" }
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
