[package]
name = "solver-main"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "solver_main"
path = "src/lib.rs"

[[bin]]
name = "taifoon-solver"
path = "src/main.rs"

[[bin]]
name = "estimate_one"
path = "src/bin/estimate_one.rs"

[dependencies]
genome-client = { path = "../genome-client" }
portfolio-sidecar = { path = "../portfolio-sidecar" }
profit-calc = { path = "../profit-calc" }
executor = { path = "../executor" }
protocol-adapters = { path = "../protocol-adapters" }
solver-api = { path = "../solver-api" }
t3rn-sidecar = { path = "../t3rn-sidecar" }
taifoon-arb-bridge = { path = "../taifoon-arb-bridge" }
wallet-manager = { path = "../wallet-manager" }
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
