[package]
name = "solver-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite.workspace = true
hex.workspace = true
