[package]
name = "solver-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "solver_sandbox"
path = "src/lib.rs"

[[bin]]
name = "taifoon-sandbox"
path = "src/main.rs"

[dependencies]
solver-registry = { path = "../solver-registry" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
chrono.workspace = true
futures.workspace = true
alloy.workspace = true
