[package]
name = "t3rn-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
axum.workspace = true
futures.workspace = true
hex.workspace = true
genome-client = { path = "../genome-client" }
portfolio-sidecar = { path = "../portfolio-sidecar" }
