[package]
name = "t3rn-sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
axum.workspace = true
futures.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
genome-client = { path = "../genome-client" }
portfolio-sidecar = { path = "../portfolio-sidecar" }

[[bin]]
name = "t3rn-solver"
path = "src/bin/t3rn_solver.rs"
