[package]
name = "taifoon-arb-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
