[package]
name = "taifoon-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taifoon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
alloy = { version = "0.5", features = ["full"] }
hex = "0.4"
colored = "2"
toml = "0.8"
dirs = "5"

# Local crates
genome-client = { path = "../genome-client" }
protocol-adapters = { path = "../protocol-adapters" }
executor = { path = "../executor" }
